--- a/Stock_Span_Problem.ipynb
+++ b/Stock_Span_Problem.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMuPn0upEn6153gl5dylGoB",
+      "authorship_tag": "ABX9TyNaOrocn9nZO01ZSsB9m0Mx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,30 +83,20 @@
         "\n",
         "    return span\n",
         "\n",
-        "# 📌 Download 5 years of daily BTC-USD data (Fix: auto_adjust=False)\n",
         "ticker = \"BTC-USD\"\n",
         "df = yf.download(ticker, period=\"5y\", interval=\"1d\", auto_adjust=False)\n",
         "\n",
-        "# Ensure 'Close' column exists\n",
         "if 'Close' not in df.columns:\n",
         "    raise KeyError(\"Column 'Close' not found. Check if Yahoo Finance changed the data format.\")\n",
         "\n",
-        "# Extract Date and Close Price\n",
-        "df = df[['Close']].copy()  # Use a copy to avoid SettingWithCopyWarning\n",
-        "df = df.reset_index()  # Reset index to move 'Date' from index to column\n",
-        "\n",
-        "# Compute stock span (✅ Without `.tolist()`)\n",
-        "df['Span'] = compute_stock_span(df['Close'].values)  # NumPy array instead of list\n",
-        "\n",
-        "# Save output to CSV\n",
+        "df = df[['Close']].copy()\n",
+        "df = df.reset_index()\n",
+        "df['Span'] = compute_stock_span(df['Close'].values)\n",
         "output_file = \"stock_span_output.csv\"\n",
         "df.to_csv(output_file, index=False)\n",
         "print(f\"Stock span saved to {output_file}\")\n",
         "\n",
-        "# Plot Closing Price & Span\n",
         "plt.figure(figsize=(12, 6))\n",
-        "\n",
-        "# Plot Close Price\n",
         "plt.subplot(2, 1, 1)\n",
         "plt.plot(df['Date'], df['Close'], marker='o', linestyle='-', color='b', label=\"Close Price\")\n",
         "plt.xlabel(\"Date\")\n",
@@ -115,7 +105,6 @@
         "plt.legend()\n",
         "plt.grid()\n",
         "\n",
-        "# Plot Stock Span\n",
         "plt.subplot(2, 1, 2)\n",
         "plt.bar(df['Date'], df['Span'], color='orange', label=\"Stock Span\")\n",
         "plt.xlabel(\"Date\")\n",
